--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
-    "node-mailjet": "^6.0.6"
+    "node-mailjet": "^6.0.6",
+    "pdfkit": "^0.16.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
